--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "sparkpost": "^2.1.4"
   }
 }
